# lightning-hydra-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  metrics.json  pyproject.toml
.github/workflows/: cml.yml
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: cml.yml  code-quality-pr.yaml  release-drafter.yml  test.yml
{{cookiecutter.project_name}}/configs/: train.yaml
{{cookiecutter.project_name}}/configs/callbacks/: early_stopping.yaml
{{cookiecutter.project_name}}/configs/data/: base.yaml
{{cookiecutter.project_name}}/configs/data/augmentation/: base.yaml
{{cookiecutter.project_name}}/configs/data/data_wrapper/: dummy.yaml
{{cookiecutter.project_name}}/configs/data/location_handler/: local.yaml
{{cookiecutter.project_name}}/configs/data/sampler/: full_image_sampler.yaml
{{cookiecutter.project_name}}/configs/experiment/: ci.yaml  dummy.yaml
{{cookiecutter.project_name}}/configs/extras/: default.yaml
{{cookiecutter.project_name}}/configs/logger/: comet.yaml  neptune.yaml  wandb.yaml
{{cookiecutter.project_name}}/configs/model/: base.yaml
{{cookiecutter.project_name}}/configs/model/architecture/: simple_unet.yaml
{{cookiecutter.project_name}}/configs/model/loss/: CE.yaml
{{cookiecutter.project_name}}/configs/model/metric/: dice.yaml
{{cookiecutter.project_name}}/configs/model/optimizer/: sgd.yaml
{{cookiecutter.project_name}}/configs/model/scheduler/: linear.yaml
{{cookiecutter.project_name}}/src/: eval.py  train.py
{{cookiecutter.project_name}}/src/data/: base_datamodule.py
{{cookiecutter.project_name}}/src/data/augmentation/: base.py
{{cookiecutter.project_name}}/src/data/data_wrapper/: base.py  dummy.py
{{cookiecutter.project_name}}/src/data/location_handler/: base.py  local.py
{{cookiecutter.project_name}}/src/data/sampler/: base.py
{{cookiecutter.project_name}}/src/data/sampler/image/: full_image_sampler.py
{{cookiecutter.project_name}}/src/models/: base_module.py
{{cookiecutter.project_name}}/src/models/architectures/segmentation/: simple_unet.py
{{cookiecutter.project_name}}/src/models/losses/: base.py  ce.py
{{cookiecutter.project_name}}/src/models/metrics/: base.py  dice.py
{{cookiecutter.project_name}}/src/utils/: utils.py
