[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "lightning-hydra-template"
version = "0.1.0"
description = ""
authors = ["Frauke Wilm"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch = "2.*"
torchvision = "0.*"
lightning = "2.*"
torchmetrics = "0.*"
hydra-core = "1.*"
rich = "13.*"
pre-commit = "3.*"
pytest = "7.*"

# Pip dependencies listed in the YAML file
hydra-optuna-sweeper = "*"
hydra-colorlog = "*"
rootutils = "*"

# Optional dependencies, these can be added if needed
# wandb = "*"
# neptune-client = "*"
# mlflow = "*"
# comet-ml = "*"
# aim = ">=3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
