[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = [
    { version = ">=2.0.0", markers = "sys_platform != 'win32'" },  # GPU version for Linux and macOS
    { version = ">=2.0.0", markers = "sys_platform == 'win32'", source = "pytorch" }  # GPU version for Windows
]
torchvision = [
    { version = ">=0.15.0", markers = "sys_platform != 'win32'" },  # GPU version for Linux and macOS
    { version = ">=0.15.0", markers = "sys_platform == 'win32'", source = "pytorch" }  # GPU version for Windows
]
lightning = "^2.5.0.post0"
torchmetrics = "^1.6.1"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
wandb = "^0.19.4"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
rootutils = "^1.0.7"
rich = "^13.9.4"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
albumentations = "^2.0.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"